# ikra-cpp

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  LICENSE  README.md  WORKSPACE  gmock.BUILD  result_bench.txt  run_bench_traffic.sh
data/bfs/: simple.txt
example/: CMakeLists.txt  n_body.cc  particle_simulation.cc
example/bfs/: CMakeLists.txt  bfs_bench.cu  bfs_const_size_array.cc  bfs_const_size_array.cu  bfs_inlined_dynamic_array.cc  bfs_loader.h  bfs_obj_array_virtual_warp.cu  bfs_std_vector.cc
example/traffic/: CMakeLists.txt  bench_result_runtime.csv  bench_result_runtime.txt  benchmark.h  configuration.h  run_bench_traffic.sh  simulation_adapter.cu  simulation_adapter.cuh  simulation_adapter.h  simulation_converter.inc  statistics.inc  traffic.cu
example/traffic/entities/: car.inc  cell.inc  priority_yield_traffic_controller.inc  shared_signal_group.inc  simulation.inc  traffic_light.inc
executor/: array.h  executor.h  iterator.h
ikra/: CMakeLists.txt
ikra/executor/: cuda_executor.h  cuda_executor_macros.h  executor.h  iterator.h  kernel_configuration.h  object_range.h  util.h
ikra/soa/: CMakeLists.txt  addressable_field_shared.inc  array_expression.h  array_field.h  array_operator.h  array_shared.inc  array_traits.h  class_initialization.h  constants.h  cuda.h  field.h  field_shared.def  field_shared.inc  field_type_generator.h  inlined_dynamic_array_field.h  layout.h  partially_inlined_array_field.h  preprocessor.h  soa.h  storage.h  type_helper.h  util.h
soa/: array.h  array_field.h  class_initialization.def  constants.h  field.h  field_type_generator.h  inlined_dynamic_array_field.h  layout.h  soa.h  storage.h  storage.inc
test/: CMakeLists.txt  array_cuda_test.cu  executor_test.cc  executor_test_layout.inc  minimum_cuda_test.cu  virtual_warp_test.cu
test/soa/: array_operations_test.cc  array_operator_test.cc  array_test.cc  array_test_layout.inc  basic_class_test.cc  basic_class_test_layout.def  basic_class_test_layout.inc  cuda_array_test.cu  cuda_inline_array_memcpy_aos_test.cu  cuda_inline_array_memcpy_test.cu  pointer_arithmetics_test.cc  simple_class_test.cc
test/soa/benchmarks/: build.sh  codegen_test.S  codegen_test.cc  cuda_codegen_test.cu  cuda_partial_inlining.cu
test/soa/benchmarks/array/: aos_style.cu  aos_style_cpu.cc  benchmark.h  configuration.h  inlined_soa_style.cu  soa_style.cu
test/soa/benchmarks/assembly/: clang++-3.8_-O0_DynamicStorage_0.S  clang++-3.8_-O0_DynamicStorage_4.S  clang++-3.8_-O0_StaticStorage_0.S  clang++-3.8_-O0_StaticStorage_4.S  clang++-3.8_-O3_DynamicStorage_0.S  clang++-3.8_-O3_DynamicStorage_4.S  clang++-3.8_-O3_StaticStorage_0.S  clang++-3.8_-O3_StaticStorage_4.S  clang++-3.8_nbody_aos.S  clang++-3.8_nbody_ikracpp.S  clang++-3.8_nbody_ikracpp_field.S  clang++-3.8_nbody_ikracpp_inversed.S  clang++-3.8_nbody_soa.S  clang++-5.0_-O0_DynamicStorage_0.S  clang++-5.0_-O0_DynamicStorage_0_Soa.S  clang++-5.0_-O0_DynamicStorage_4.S  clang++-5.0_-O0_DynamicStorage_4_Soa.S  clang++-5.0_-O0_StaticStorage_0.S  clang++-5.0_-O0_StaticStorage_0_Aos.S  clang++-5.0_-O0_StaticStorage_0_Soa.S  clang++-5.0_-O0_StaticStorage_4.S  clang++-5.0_-O0_StaticStorage_4_Soa.S  clang++-5.0_-O3_DynamicStorage_0.S  clang++-5.0_-O3_DynamicStorage_0_Soa.S  clang++-5.0_-O3_DynamicStorage_4.S  clang++-5.0_-O3_DynamicStorage_4_Soa.S  clang++-5.0_-O3_StaticStorage_0.S  clang++-5.0_-O3_StaticStorage_0_Aos.S  clang++-5.0_-O3_StaticStorage_0_Soa.S  clang++-5.0_-O3_StaticStorage_4.S  clang++-5.0_-O3_StaticStorage_4_Soa.S  clang++-5.0_nbody_aos.S  clang++-5.0_nbody_ikracpp.S  clang++-5.0_nbody_ikracpp_field.S  clang++-5.0_nbody_ikracpp_inversed.S  clang++-5.0_nbody_soa.S  cuda_array_aos_style.S  cuda_array_inlined_soa_style.S  cuda_array_soa_style.S  cuda_codegen_test.S  (+34 more)
test/soa/benchmarks/nbody/: aos.cc  benchmark.h  ikracpp.cc  ikracpp_field.cc  ikracpp_inversed.cc  ikracpp_inversed_field_gpu.cu  ikracpp_inversed_gpu.cu  ikracpp_operator.cc  ikracpp_with_operations.cc  soa.cc  soa_inversed.cu
test/soa/benchmarks/nbody/cgo/: benchmark.h  build_simple.sh  build_simple_cuda.sh  simple_aos.cc  simple_cuda_aos.cu  simple_cuda_ikra.cu  simple_cuda_soa.cu  simple_ikra.cc  simple_soa.cc  size_generator.py  size_generator_cuda.py  size_generator_cuda_runs.py
test/soa/benchmarks/nbody/cgo/results/: result_simple_cuda_laptop.txt  result_simple_cuda_workstation.txt  result_simple_i3.txt  result_simple_i3_aos0.txt  result_simple_laptop.txt  result_simple_laptop_aos0.txt  result_simple_workstation.txt  result_simple_workstation_aos0.txt
